fix: DebugViewPage nodes overflow

--- a/frontend/styles/displays/debug-tree.css
+++ b/frontend/styles/displays/debug-tree.css
@@ -4,7 +4,7 @@
     flex-wrap: nowrap;
     flex-basis: auto;
     justify-content: flex-start;
-    align-items: center;
+    align-items: safe center;
 }
 
 .debug-tree-title {
